# ca-mvum

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  Makefile  PRODUCT.md  README.md  pyproject.toml
.github/workflows/: ci.yml  data-refresh.yml  deploy-tiles.yml
docs/: r2-range-requests-plan.md
pipeline/: build_tiles.py  fetch_mvum.py  forests.py  normalize.py
plans/: 001-trail-layer-popups-and-fire.md  002-verification-baseline.md  003-gt50-profile-mapping.md  004-local-date-and-doy-alignment.md  005-per-class-season-windows.md  006-hygiene-sweep.md  007-repo-claude-md.md  008-automated-data-refresh.md  009-amend-theme-docs.md  README.md
tests/: test_build_tiles.py  test_fetch_guard.py  test_forests.py  test_normalize.py
web/: index.html  package-lock.json  package.json  wrangler.toml
web/public/: _headers
web/src/: aqi.ts  config.test.ts  config.ts  escape.test.ts  escape.ts  export.ts  fire.ts  legal.test.ts  legal.ts  main.ts  search.ts  smoke.ts  snow.ts  style.ts  styles.css  weather.ts
